# diploma

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  ruff.toml
ai_core/: gemini.py  schemas.py
config/: config.py
handlers/: generate_text_handler.py  start_handler.py  states.py
keyboards/: start_keyboard.py
src/: __init__.py  main.py
src/core/: config.dev.yaml  config.py  parse_config.py
src/decorators/: __init__.py  bot_mode.py
src/dispatcher/: __init__.py  callback_datas.py  commands.py
src/dispatcher/handlers/: book.py  chapter.py  course.py  enrollment.py  gemini.py  inline_query.py  instructor.py  message.py  start.py
src/dispatcher/keyboards/: keyboard.py
src/dispatcher/messages/: course_details.py
src/dispatcher/states/: gemini.py  registration.py
src/runners/: polling.py  webhook.py
src/services/: api.py  gemini.py
src/services/schemas/: gemini.py  schemas.py  user.py
