[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.8.0",
    "pydantic[email]>=2.10.6",
    "pyyaml>=6.0.2",
    "ruff==0.11.2",
]
